<resources>
    <string name="app_name">MemoryGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memory_game">Memory Game</string>
    <string name="get_json">Get JSON</string>
    <string name="exit">Выход</string>
    <string name="play">Играть</string>
    <string name="attempt">Количество ходов: %s</string>
    <string name="time">Затраченое время: %s</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="restart">Restart</string>
    <string name="get_data">Get Data</string>
    <string name="time_zone">Time zone</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="toMenu">Выход в меню</string>
    <string name="restart2">Начать заново</string>
</resources>