<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.JsonActivity">

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/country"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="16dp"
        />

    <TextView
        android:id="@+id/timeZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_zone"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/city"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="16dp"
        />

    <Button
        android:id="@+id/buttonGetJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/get_data"/>

</androidx.constraintlayout.widget.ConstraintLayout>